优化审核日志字段